SCRD-826 Fix button shifting when show progress log (#76)
also miscellaneous minor fixes

--- a/src/styles/components/deployprogress.less
+++ b/src/styles/components/deployprogress.less
@@ -20,6 +20,7 @@
   .progress-body {
     display: inline-block;
     width: 100%;
+    min-height: 40em;
   }
   .log {
     margin-top: 1em;
