--- a/src/styles/components/logviewer.less
+++ b/src/styles/components/logviewer.less
@@ -1,6 +1,5 @@
 .log-viewer {
-  font-size: 12px;
   font-family: monospace;
-  min-height: 500px;
-  min-width: 500px;
+  min-height: 38em;
+  min-width: 45em;
 }
